--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ html {
 body {
   font-family: 'Press Start 2P', sans-serif;
   color: #eee;
-  background-color: #3c2d91;
-  /* background-color: #60b347; */
+  background-color: #2104c9;
+  /* background-color: #18cf3f; */
 }
 
 /* LAYOUT */
